# video-stabilizer

./: .gitignore  CMakeLists.txt  cvtest.kdev4  main.cpp
docs/: Doxyfile
src/: main.cpp
